examples/valid/40_explicit_generic_function_application.lane
module Examples.Valid.ExplicitGenericFunctionApplication

import Basic.Io.{ println }
import Basic.Trait.Ops.*

effect Log {
  log(Int) -> Unit
}

effect Coroutine[_E : Effect] {
  yield() -> Unit
}

fn[A] id(value : A) -> A {
  value
}

fn[E : Effect] yield_once() -> Unit ! Coroutine[E] {
  Coroutine[E]::yield!()
}

fn handled_yield() -> Int {
  handle yield_once[Log]() with {
    Coroutine[Log]::yield(resume) => resume(())
  } final _value {
    id[Int](42)
  }
}

fn explicit_id() -> Int {
  {
    let id_int : (Int) -> Int = id[Int]
    id[Int](id_int(handled_yield()))
  }
}

pub fn answer() -> Unit ! Io {
  if explicit_id() == 42 {
    println("42")
  } else {
    println("bad:42")
  }
}
