examples/invalid/37_empty_explicit_generic_arguments.lane
module Examples.Invalid.EmptyExplicitGenericArguments

fn[A] id(value : A) -> A {
  value
}

let value : Int = id[](1)
